src/test/egern/success/redeclaring_parameter_as_variable.egern
func abc(a) {
    print(a);
    var a = 4;
    print(a);
    return a;
}

print(abc(3));
