src/test/egern/fail/redeclaring_parameter_as_variable_fail.egern
func abc(a) {
    var a = 4;
    return a;
}
